--- a/mpc_ros/package.xml
+++ b/mpc_ros/package.xml
@@ -20,6 +20,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>cai_msgs</build_depend>
   <build_depend>tf</build_depend>  
   <build_depend>nav_core</build_depend>
   <build_depend>base_local_planner</build_depend>
@@ -44,6 +45,7 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>ackermann_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>cai_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
