--- a/mpc_ros/CMakeLists.txt
+++ b/mpc_ros/CMakeLists.txt
@@ -10,27 +10,34 @@ option(BUILD_EXAMPLE "Whether or not building the CppAD & Ipopt example" OFF)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  costmap_2d
-  dynamic_reconfigure
-  geometry_msgs
-  nav_msgs
-  #ackermann_msgs
-  pluginlib
-  message_generation
-  move_base
-  base_local_planner
-  roscpp
-  rospy
-  std_msgs
-  tf
-  visualization_msgs
-)
+find_package(catkin REQUIRED 
+  COMPONENTS
+    costmap_2d
+    dynamic_reconfigure
+    geometry_msgs
+    nav_msgs
+    pluginlib
+    message_generation
+    move_base
+    base_local_planner
+    roscpp
+    rospy
+    std_msgs
+    tf
+    visualization_msgs
+    cai_msgs
+  )
+find_package(Boost REQUIRED
+  COMPONENTS
+    thread
+    )
 
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
-include_directories( ${catkin_INCLUDE_DIRS} include )
+include_directories( 
+  include
+  ${catkin_INCLUDE_DIRS}
+  )
 include_directories(/usr/include)
+
 link_directories(/usr/lib)
 
 
@@ -41,40 +48,68 @@ generate_dynamic_reconfigure_options(
 
 
 catkin_package(
-   INCLUDE_DIRS include
-   LIBRARIES mpc_ros
-   CATKIN_DEPENDS costmap_2d dynamic_reconfigure geometry_msgs move_base roscpp rospy std_msgs tf visualization_msgs pluginlib
-#  DEPENDS system_lib
+  INCLUDE_DIRS include
+  LIBRARIES 
+    mpc_ros
+    odom_helper
+  CATKIN_DEPENDS 
+    costmap_2d 
+    dynamic_reconfigure 
+    geometry_msgs 
+    move_base 
+    roscpp 
+    rospy 
+    std_msgs 
+    tf 
+    visualization_msgs 
+    pluginlib
+    cai_msgs
 )
 
 ###########
 ## Build ##
 ###########
 
-# General MPC_Node 
-ADD_EXECUTABLE( MPC_Node src/MPC.cpp src/MPC_Node.cpp )
-TARGET_LINK_LIBRARIES(MPC_Node ipopt ${catkin_LIBRARIES} )
+# # General MPC_Node 
+# ADD_EXECUTABLE( MPC_Node src/MPC.cpp src/MPC_Node.cpp )
+# TARGET_LINK_LIBRARIES(MPC_Node ipopt ${catkin_LIBRARIES} )
 
-# Total navigation with MPC_Node
-ADD_EXECUTABLE( nav_mpc src/navMPC.cpp src/navMPCNode.cpp )
-TARGET_LINK_LIBRARIES(nav_mpc ipopt ${catkin_LIBRARIES} )
+# # Total navigation with MPC_Node
+# ADD_EXECUTABLE( nav_mpc src/navMPC.cpp src/navMPCNode.cpp )
+# TARGET_LINK_LIBRARIES(nav_mpc ipopt ${catkin_LIBRARIES} )
 
-# Local planner with MPC_Node for tracking
-ADD_EXECUTABLE( tracking_reference_trajectory src/trackRefTraj.cpp src/trackRefTrajNode.cpp )
-TARGET_LINK_LIBRARIES(tracking_reference_trajectory ipopt ${catkin_LIBRARIES} )
+# # Local planner with MPC_Node for tracking
+# ADD_EXECUTABLE( tracking_reference_trajectory src/trackRefTraj.cpp src/trackRefTrajNode.cpp )
+# TARGET_LINK_LIBRARIES(tracking_reference_trajectory ipopt ${catkin_LIBRARIES} )
 
-# Pure Pursuit Node
-add_executable(Pure_Pursuit src/Pure_Pursuit.cpp)
-target_link_libraries(Pure_Pursuit ${catkin_LIBRARIES})
+# # Pure Pursuit Node
+# add_executable(Pure_Pursuit src/Pure_Pursuit.cpp)
+# target_link_libraries(Pure_Pursuit ${catkin_LIBRARIES})
 
-# Own Global planner for tracking desired trajectory
-add_library(global_planner_lib src/global_planner/global_planner.cpp)
-TARGET_LINK_LIBRARIES(global_planner_lib ipopt ${catkin_LIBRARIES} )
+# # Own Global planner for tracking desired trajectory
+# add_library(global_planner_lib src/global_planner/global_planner.cpp)
+# TARGET_LINK_LIBRARIES(global_planner_lib ipopt ${catkin_LIBRARIES} )
 
 # MPC Local planner plugin
-add_library(mpc_ros src/mpc_plannner_ros.cpp src/mpc_plannner.cpp)
-TARGET_LINK_LIBRARIES(mpc_ros ipopt ${catkin_LIBRARIES} )
+add_library(mpc_ros 
+  src/mpc_plannner_ros.cpp 
+  src/mpc_plannner.cpp)
+add_dependencies(mpc_ros mpc_ros_gencfg)
 
+add_library(odom_helper
+  src/odometry_helper_ros.cpp)
+
+# TARGET_LINK_LIBRARIES(
+#   mpc_ros 
+#   ipopt 
+#   ${catkin_LIBRARIES}
+#   )
+
+target_link_libraries(mpc_ros ipopt odom_helper
+  ${catkin_LIBRARIES}
+  )
+target_link_libraries(mpc_ros
+odom_helper)
 #############
 ## Example ##
 #############
