add some values

--- a/mpc_ros/cfg/MPCPlanner.cfg
+++ b/mpc_ros/cfg/MPCPlanner.cfg
@@ -10,9 +10,11 @@ gen = ParameterGenerator()
 # that concern all localplanners
 add_generic_localplanner_params(gen)
 
-gen.add("debug_info", bool_t, 0, "Debug information", False)
+gen.add("debug_info", bool_t, 0, "Debug information", True)
 gen.add("delay_mode", bool_t, 0, "Delay mode", True)
+# gen.add("prune_plan", bool_t, 0, "use prune plan function on local planner utils", False)
 gen.add("max_speed", double_t, 0, "Maximum speed [m/s]", 0.50, 0.01, 5.0)
+gen.add("default_max_speed", double_t, 0, "Default Maximum speed [m/s]", 0.50, 0.01, 5.0)
 gen.add("waypoints_dist", double_t, 0, "Waypoint distance [m]", -1, -1.0, 10.0)
 gen.add("path_length", double_t, 0, "Path length [m]", 5.0, 0.0, 10.0)
 gen.add("controller_freq", double_t, 0, "Controller Frequency", 10.0, 0.01, 100.0)
@@ -34,5 +36,6 @@ gen.add("max_angvel", double_t, 0, "Maximum Angular velocity", 1.0, 0.01, 5.0)
 gen.add("max_throttle", double_t, 0, "Maximum Throttle", 1.0, 0.01, 5.0)
 gen.add("bound_value", double_t, 0, "Bound value", 1000.0, 0.01, 1000.0)
 
+gen.add("heading_yaw_error_threshold", double_t, 0, "Max etheta before tracking, differnce with path direction and heading yaw", 0.1, 0.01, 0.5)
 
 exit(gen.generate("mpc_ros", "mpc_ros", "MPCPlanner"))
